[package]
name = "shopify_offers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.23.0"
dotenv = "0.15.0"
futures = "0.3.29"
rayon = "1.8.0"
reqwest = { version = "0.11.22", features = ["stream","multipart","json"] }
rfd = "0.12.0"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = {version = "1.0.108", features = ["preserve_order"]}
tokio = { version = "1.35.0", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }